# PS3API

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml
ps3api/: RPCPayload.s  __init__.py  api.py  ccapi.py  common.py  memutils.py  rpc.py  syscalls.py  tmapi.py
tools/: compile-rpc.py
