# Source: https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata

[metadata]
name = ps3api
version = v0.0.1
author = iMoD1998
author_email = imod1998@protonmail.com
description = Python module for interacting with PS3 using CCAPI or TMAPI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iMoD1998/PS3API
project_urls =
    Bug Tracker = https://github.com/iMoD1998/PS3API/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Assembly
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers

[options]
package_dir =
    = .
packages = ps3api
python_requires = >=3.6
install_requires =